@@ -2,20 +2,22 @@ settings:
   config:
     # With this enabled anyone set as op has full permissions when managing GroupManager
     opOverrides: true
+    
     # If enabled any bukkit permissiosn which default to true will be left enabled.
     # If the player is op any permissions set to Op will follow suit.
     bukkit_perms_override: false
+    
   data:
     save:
       # How often GroupManager will save it's data back to groups and users.yml
       minutes: 10
+      
   logging:
     # level of detail GroupManager will use when logging.
     # Acceptable entries are - ALL,CONFIG,FINE,FINER,FINEST,INFO,OFF,SEVERE,WARNING
     level: INFO
-  permission:
-    world:
-      mirror:
+    
+  mirrors:
         # Worlds listed here have their permissions mirrored in their children.
         world:
           - world_nether
